syntax = "proto3";

package ServiceName_proto;

service ServiceNameService{

    // Echo echos the request back
    rpc Echo (EchoRequest) returns (EchoResponse){
    }

    // Uppercase uppercases the msg provided in the request
    rpc Uppercase (UppercaseRequest) returns (UppercaseResponse){
    }

    // search through all the messages
    rpc SearchComments (SearchCommentsRequest) returns (SearchCommentsResponse){
    }

    // Add a comment to system
    rpc AddComment (AddCommentRequest) returns (AddCommentResponse) {
    }

    // fetchs comment for the uuid
    rpc GetComment (GetCommentRequest) returns (GetCommentResponse) {
    }
}

message EchoRequest {
    string msg = 1;
}

message EchoResponse {
    string msg = 1;
}

message UppercaseRequest {
    string msg = 1;
}

message UppercaseResponse {
    string msg = 1;
    string uppercase = 2;
}

message SearchCommentsResponse {
    message Comment {
        string UUID = 1;
        string Comment = 2;
    }
    repeated Comment comments = 1;
}

message SearchCommentsRequest {
    string query = 1;
}

message AddCommentRequest {
    string Comment = 1;
}
message AddCommentResponse {
    string UUID = 1;
}

message GetCommentRequest {
    string UUID = 1;
}
message GetCommentResponse {
    string UUID = 1;
    string Comment = 2;
}
